# global_scripts

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  adb.sh  android_build.sh  android_grep.sh  android_push.sh  app-build.py  app_build.py  bs_network.py  chmod_files.py  common_alias.sh  copy_android_image.py  env.sh  environment.sh  forecast.py  game_dock_engine.py  game_dock_gerrit.py  gerrit.py  gs_adb.sh  gs_android_build.sh  gs_android_command.sh  gs_android_push.sh  gs_common_alias.sh  gs_env.sh  gs_ext.sh  gs_gerrit.py  gs_git_copy.sh  gs_private_alias.sh  gs_prompt_theme.sh  gs_setup_new_mac_computer.sh  gs_system.sh  gs_test.sh  gs_zsh_theme.sh  ignore_bot_schedule.py  install.sh  private_alias.sh  pyproject.toml  (+7 more)
.work/: clean.py  config.json  generate-cmake.py  git_work_init_project.py  gs_repo.py  gs_work.sh  gs_work_gerrit.py  gs_work_gitlab.sh  gs_work_review.py  gs_work_upuphone.py  mix-cmake.py  mix_cmake.py  project-u.json  project.json  project_gerrit.list  project_review.list  project_upuphone.list  work_config.sh  work_gitlab.sh
api/: command_api.sh  config_api.sh
base/: singleton.py  smart_log.py  url_extract.py
clash/: gs_system_clash.sh
codestyle/: checks_alibaba.xml  checks_strict_mode.xml  detekt_strict_mode.yml
commands/: gs_help.sh  gs_status.sh  gs_version.sh
conf/: .editorconfig  .gsrc  .zshrc  gs_init_cargo  gs_init_git  gs_init_ssh  gs_init_tmux  gs_init_vim  gs_init_zsh
config/: .gitattributes  .gitconfig  .gitconfig_vm  .gitwork  .gsconf  .zshrc  android_image_config.py  bot_database.py  default.json  gerrit_merged_config.py  gerrit_review_config.py  gs.json  jenkins_release_config.py  jira_di_config.py  jira_review_config.py  jira_server_config.py  jira_track_config.py  sync_android_source_code_config.py  sync_code_config.py  system_config.yaml  user_config.py
core/: bootstrap.sh  cache.sh  cache_manager.sh  command_registry.sh  config.sh  logger.sh  platform_compat.sh  plugin_detector.sh  registry.sh  system_loader.sh
digiccy/: dc.py
docs/: 01-现状分析报告.md  02-重构计划与任务.md  03-详细重构设计文档.md  Global-Scripts-V3-使用与开发指南.md  README.md  architecture.md  changelog.md  cli-reference.md  contributing.md  faq.md  git-workflow.md  installation.md  (+5 more)
docs/advanced/examples/custom_parser/: README.md  example_plugin.yaml  pyproject.toml  yaml_parser.py
(+683 files in other folders)
