[project]
name = "global-scripts"
dynamic = ["version"]
description = "Modern Plugin Framework - 零依赖的高性能Shell命令管理系统"
authors = [
    { name = "Solo", email = "anqi.huang@outlook.com" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["shell", "automation", "plugin", "cli", "devops", "android"]

dependencies = [
    "PyYAML>=6.0.1", # 系统配置加载（system_config.yaml）
    "Jinja2>=3.1.2", # 模板引擎（env.sh/env.fish生成）
    "aiofiles>=0.8.0,<1.0", # 异步文件I/O（有同步fallback）
    "rich>=13.0.0", # 终端美化和表格显示
    "nest-asyncio>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/i-rtfsc/global_scripts"
Documentation = "https://github.com/i-rtfsc/global_scripts/tree/main/docs"
Repository = "https://github.com/i-rtfsc/global_scripts.git"
Issues = "https://github.com/i-rtfsc/global_scripts/issues"


[project.scripts]
gs = "gscripts.cli.main:main"

[project.entry-points."gscripts.parsers"]
python = "gscripts.plugins.parsers.python_parser:PythonFunctionParser"
shell = "gscripts.plugins.parsers.shell_parser:ShellFunctionParser"
config = "gscripts.plugins.parsers.config_parser:ConfigFunctionParser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gscripts"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8.0",
    "pytest-asyncio>=0.20.0,<1.0",
    "pytest-cov>=4.0.0,<5.0",
    "black>=22.0.0,<25.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.0.0,<2.0",
    "pre-commit>=3.0.0,<4.0",
]
