[project]
name = "gscripts-yaml-parser"
version = "1.0.0"
description = "YAML parser extension for Global Scripts"
authors = [
    { name = "Example Author", email = "author@example.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "global-scripts>=6.0.0",
    "PyYAML>=6.0.0",
]

# Entry point for automatic parser discovery
[project.entry-points."gscripts.parsers"]
yaml = "yaml_parser:YAMLFunctionParser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
